# open-notebook-mcp

./: .env.example  .gitignore  AGENTS.md  CONTRIBUTING.md  Makefile  README.md  examples.py  pyproject.toml  server.json
.devcontainer/: Dockerfile  devcontainer.json  init-firewall.sh
.github/workflows/: publish-mcp.yml
src/open_notebook_mcp/: server.py
tests/: test_capabilities.py
