[project]
name = "open-notebook-mcp"
version = "0.1.1"
description = "MCP server that wraps the Open Notebook API"
authors = [
    { name = "Piotr Mrzygłowski", email = "piotr@epochal.dev" }
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.28.1",
    "mcp[cli]>=1.23.2",
]

[dependency-groups]
dev = [
    "pytest>=8.3.4",
]

[project.urls]
Repository = "https://github.com/Epochal-dev/open-notebook-mcp"
Homepage = "https://github.com/Epochal-dev/open-notebook-mcp"

[project.scripts]
open-notebook-mcp = "open_notebook_mcp:main"

[build-system]
requires = ["uv_build>=0.9.16,<0.10.0"]
build-backend = "uv_build"
